--- a/style.scss
+++ b/style.scss
@@ -1,56 +1,52 @@
-*{
+* {
     padding: 0px;
-    margin:0px;
+    margin: 0px;
 }
 
-.mainPage{
-    background-color: #a7f0f0;
+.mainPage {
+    background-color: #8bf1f1;
     width: 100%;
     height: 100%;
     text-align: center;
-    
-    #label{
-        font-size: 4em;
-        color: rgb(34, 97, 97);
+
+    #label {
+        font-size: 4.5em;
+        color: rgb(23, 61, 61);
         margin-bottom: 10px;
     }
-.result{
-    font-size: 2em;
-}
 
-     .firstRow{
-         display: flex;
-         flex-wrap: wrap;
-      justify-content: center;      
-      
+    .result {
+        font-size: 2em;
+    }
+    .firstRow {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
 
-         div{ 
-             margin: 50px 25px
-             60px 25px;
-             width: 300px;
-             border:3px solid rgb(90, 90, 207);
-             background-color: rgb(67, 67, 141);
-             transition: 0.8s;
-             cursor: pointer;
-             
-             &:hover{
-                 background-color: rgb(45, 11, 126);
-                 transform: scale(1.1);
-             }        
-        p{   
-            margin:0px 0px 20px 5px;
-            color: white;
-            font-size: 1.2em;
-            color:rgb(236, 243, 243);     
-            
-            &:first-of-type{
-                margin-top: 10px;
-                font-weight: 600;
+        div {
+            margin: 50px 25px 60px 25px;
+            width: 300px;
+            border: 6px solid rgb(244, 244, 247);
+            border-radius: 15px;
+            background-color: rgb(67, 67, 141);
+            transition: 0.8s;
+            cursor: pointer;
+
+            &:hover {
+                background-color: rgb(45, 11, 126);
+                transform: scale(1.1);
+            }
+            p {
+                margin: 0px 0px 20px 5px;
+                color: white;
+                font-size: 1.2em;
+                color: rgb(236, 243, 243);
+
+                &:first-of-type {
+                    margin-top: 10px;
+                    font-weight: 700;
+                }
             }
         }
-     
     }
 }
-    
-}
-
